fixed update-button, fixed zone name with whitespaces

--- a/m/style.css
+++ b/m/style.css
@@ -30,6 +30,7 @@ a {
     position: absolute;
     top: -1.8%;
     right: 8%;
+    white-space: nowrap;
 }
 
 div.navbar-background {
